resources/dsaas-stg/bayesian-preview/APIcast.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: apicast
  name: crda-api
spec:
  port:
    targetPort: proxy
  host: gw.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
