resources/dsaas-stg/bayesian-preview/bayesian-data-importer.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: bayesian-data-importer
    template: bayesian-data-importer
  name: data-importer
spec:
  port:
    targetPort: "9192"
  to:
    kind: Service
    name: bayesian-data-importer
    weight: 100
  wildcardPolicy: None
