resources/dsaas-stg/bayesian-preview/bayesian-gremlin-http.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 120s
    openshift.io/host.generated: "true"
  labels:
    service: bayesian-gremlin-http
    template: bayesian-gremlin-server
  name: bayesian-gremlin-http
spec:
  host: bayesian-gremlin-http-bayesian-preview.4c1c.dsaas-stg.openshiftapps.com
  port:
    targetPort: "8182"
  to:
    kind: Service
    name: bayesian-gremlin-http
    weight: 100
  wildcardPolicy: None
