resources/dsaas-stg/bayesian-preview/bayesian-kronos-maven.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: bayesian-kronos-maven
    template: bayesian-kronos
  name: bayesian-kronos-maven
spec:
  host: bayesian-kronos-maven-bayesian-preview.4c1c.dsaas-stg.openshiftapps.com
  to:
    kind: Service
    name: bayesian-kronos-maven
    weight: 100
  wildcardPolicy: None
