resources/dsaas-stg/bayesian-preview/bayesian-osa-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    template: osa
  name: osa-api-server
spec:
  host: osa.api.prod-preview.openshift.io
  to:
    kind: Service
    name: osa-api-server
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
