resources/dsaas-stg/bayesian-preview/crda-new-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: crda-new-ui
  name: crda-new-ui
spec:
  host: crda-report.prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: crda-new-ui
    weight: 100
  wildcardPolicy: None
