resources/dsaas-stg/bayesian-preview/f8a-3scale-connect-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: f8a-3scale-connect-api
  name: f8a-3scale-connect-api
spec:
  host: 3scale-connect.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-3scale-connect-api
    weight: 100
  wildcardPolicy: None
