resources/dsaas-stg/bayesian-preview/f8a-emr-deployment.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: f8a-emr-deployment
  name: f8a-emr-deployment
spec:
  host: emr-deployment.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-emr-deployment
    weight: 100
  wildcardPolicy: None
