resources/dsaas-stg/bayesian-preview/f8a-gemini-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: f8a-gemini-server
  name: f8a-gemini-server
spec:
  host: gemini.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-gemini-server
    weight: 100
  wildcardPolicy: None
