resources/dsaas-stg/bayesian-preview/f8a-jobs.v1.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: bayesian-jobs
    template: bayesian-jobs
  name: bayesian-jobs-v1
spec:
  path: /api/v1
  port:
    targetPort: "34000"
  to:
    kind: Service
    name: bayesian-jobs
    weight: 100
  wildcardPolicy: None
