resources/dsaas-stg/bayesian-preview/f8a-license-analysis.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: f8a-license-analysis
  name: f8a-license-analysis
spec:
  host: license-analysis.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-license-analysis
    weight: 100
  wildcardPolicy: None
