resources/dsaas-stg/bayesian-preview/f8a-pypi-insights.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: f8a-pypi-insights
  name: f8a-pypi-insights
spec:
  host: pypi-insights.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-pypi-insights
    weight: 100
  wildcardPolicy: None
