resources/dsaas-stg/bayesian-preview/hpf-maven-insights.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: f8a-hpf-insights-maven
    template: f8a-hpf-insights
  name: hpf-maven-insights
spec:
  host: hpf-maven-insights-bayesian-preview.4c1c.dsaas-stg.openshiftapps.com
  to:
    kind: Service
    name: f8a-hpf-insights-maven
    weight: 100
  wildcardPolicy: None
