resources/dsaas-stg/bayesian-preview/npm-insights.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: f8a-npm-insights
    template: f8a-npm-insights
  name: npm-insights
spec:
  host: npm-insights-bayesian-preview.4c1c.dsaas-stg.openshiftapps.com
  to:
    kind: Service
    name: f8a-npm-insights
    weight: 100
  wildcardPolicy: None
