resources/dsaas-stg/bayesian-preview/osd-monitor.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: osd-monitor
spec:
  host: osd-monitor-bayesian-preview.4c1c.dsaas-stg.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: osd-monitor
    weight: 100
  wildcardPolicy: None
