resources/dsaas-stg/bayesian-preview/recommender-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/timeout: 300s
  labels:
    service: bayesian-api
    template: bayesian-core
  name: recommender-api
spec:
  port:
    targetPort: "32000"
  host: recommender.api.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bayesian-api
    weight: 100
  wildcardPolicy: None
