resources/dsaas-stg/bayesian-preview/stack-analytics-report.prod-preview.openshift.io.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: stack-analytics-report.prod-preview.openshift.io
spec:
  host: stack-analytics-report.prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fabric8-analytics-stack-report-ui
    weight: 100
  wildcardPolicy: None
