resources/dsaas-stg/bayesian-preview/stage-pg-bouncer.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: bayesian-pgbouncer
    template: bayesian-pgbouncer
  name: stage-pg-bouncer
spec:
  host: stage-pg-bouncer-bayesian-preview.4c1c.dsaas-stg.openshiftapps.com
  port:
    targetPort: "5432"
  to:
    kind: Service
    name: bayesian-pgbouncer
    weight: 100
  wildcardPolicy: None
